--- a/_publications/iccv2025.md
+++ b/_publications/iccv2025.md
@@ -5,8 +5,8 @@ permalink: /publication/iccv2025
 excerpt: ''
 date: 2025-10-18
 venue: 'IEEE/CVF International Conference on Computer Vision (ICCV)'
-paperurl: 'https://arxiv.org/pdf/2412.18675'
-citation: 'Rahmanzadehgervi, P., Nguyen, H.H., Liu, R., Mai, L. and Nguyen, A.T., 2024. TAB: Transformer Attention Bottlenecks enable User Intervention and Debugging in Vision-Language Models. arXiv preprint arXiv:2412.18675.'
+paperurl: 'https://openaccess.thecvf.com/content/ICCV2025/papers/Rahmanzadehgervi_TAB_Transformer_Attention_Bottlenecks_enable_User_Intervention_and_Debugging_in_ICCV_2025_paper.pdf'
+citation: 'Rahmanzadehgervi P, Nguyen HH, Liu R, Mai L, Nguyen AT. TAB: Transformer Attention Bottlenecks enable User Intervention and Debugging in Vision-Language Models. InProceedings of the IEEE/CVF International Conference on Computer Vision 2025 (pp. 22551-22562).'
 ---
 Multi-head self-attention (MHSA) is a key component of Transformers, a widely popular architecture in both language and vision. Multiple heads intuitively enable different parallel processes over the same input. Yet, they also obscure the attribution of each input patch to the output of a model. We propose a novel 1-head Transformer Attention Bottleneck (TAB) layer, inserted after the traditional MHSA architecture, to serve as an attention bottleneck for interpretability and intervention. Unlike standard self-attention, TAB constrains the total attention over all patches to \in [0, 1]. That is, when the total attention is 0, no visual information is propagated further into the network, and the vision-language model (VLM) would default to a generic, image-independent response. To demonstrate the advantages of TAB, we train VLMs with TAB to perform image-difference captioning. Over three datasets, our models perform similarly to baseline VLMs in captioning but the bottleneck is superior in localizing changes and in identifying when no changes occur. TAB is the first architecture to enable users to debug by editing attention, which often produces expected outputs by VLMs. 
 
